--- a/public/chat.html
+++ b/public/chat.html
@@ -5,8 +5,10 @@
         <script src="https://cdn.rawgit.com/showdownjs/showdown/1.7.4/dist/showdown.min.js"></script>
         <link rel="stylesheet" href="css/styles.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+       
     </head>
     <body >
+   
       <div class="wrapper">
 
         <div id="message_window">
@@ -56,8 +58,16 @@
                     <button type="submit">Send</button>
                 </form>
             </footer>
+                 <!-- inizio mic-->
+            <div class="mic">
+            <div class="ready"><a href="#" id="start"><img src="mic.svg" alt="Tap me to speak" /></a></div>
+            <div class="listening"><span class="listening-1">.</span><span class="listening-2">.</span><span class="listening-3">.</span></div>
+        </div>
+        <!-- fine mic-->
         </div>
         </div>
-        <script src="client.js"></script>
+       <script src="client.js"></script> 
+  <!--   <script type="text/javascript" src="ApiAi.js"></script>
+     <script type="text/javascript" src="app.js"></script>--> 
     </body>
 </html>
